--- a/README
+++ b/README
@@ -5,6 +5,7 @@ js-numbers: a Javascript implementation of Scheme's numeric tower
 
 TODO
 ----
-Bring over the numeric test cases from Moby
+Bring over the numeric test cases from Moby.
+Add real documentation.
 Integrate regular, unboxed fixnums.
 Integrate bignums.
