--- a/README
+++ b/README
@@ -70,6 +70,9 @@ inf: scheme-number
 negative_inf: scheme-number
     negative infinity
 
+negative_zero: scheme-number
+    The value -0.0.
+
 zero: scheme-number
 
 one: scheme-number
